--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -7,23 +7,7 @@
   display: flex;
 }
 
-form {
-  border: 1px solid red;
-  display: flex;
-  flex-direction: column;
-  gap: 0.5rem;
-  align-items: flex-start;
-}
-
-.form-field {
-  display: flex;
-  flex-direction: column;
-}
-
-.form-field span {
-  font-size: 0.8rem;
-}
-
-.form-field.checkbox {
-  flex-direction: row;
+#root > div {
+  flex: 1;
+  border: 3px solid black;
 }
