--- a/src/styles/Section.css
+++ b/src/styles/Section.css
@@ -1,3 +1,34 @@
 section {
   border: 1px solid blue;
+  padding: 1.5rem;
+}
+
+section h1 {
+  background-color: blue;
+  margin-bottom: 1.5rem;
+}
+
+h1.collapsed {
+  margin-bottom: 0;
+}
+
+form {
+  border: 1px solid red;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  align-items: flex-start;
+}
+
+.form-field {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-field span {
+  font-size: 0.8rem;
+}
+
+.form-field.checkbox {
+  flex-direction: row;
 }
