--- a/src/styles/Section.css
+++ b/src/styles/Section.css
@@ -1,11 +1,14 @@
 section {
-  border: 1px solid blue;
-  padding: 1.5rem;
+  background-color: #415a77;
+  padding: 0.75rem;
+  border-radius: 10px;
 }
 
 section h1 {
-  background-color: blue;
-  margin-bottom: 1.5rem;
+  color: white;
+  margin-bottom: 0.75rem;
+  padding: 1rem;
+  border-radius: 10px;
 }
 
 h1.collapsed {
@@ -13,22 +16,45 @@ h1.collapsed {
 }
 
 form {
-  border: 1px solid red;
+  background-color: white;
   display: flex;
   flex-direction: column;
-  gap: 0.5rem;
+  gap: 1rem;
   align-items: flex-start;
+  padding: 1rem;
+  border-radius: 10px;
+}
+
+form > div {
+  width: 100%;
 }
 
 .form-field {
+  gap: 0.5rem;
   display: flex;
   flex-direction: column;
 }
 
 .form-field span {
+  font-weight: 800;
   font-size: 0.8rem;
 }
 
 .form-field.checkbox {
   flex-direction: row;
+}
+
+input,
+textarea {
+  padding: 0.5rem 0.5rem;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+button {
+  background-color: #778da9;
+  color: white;
+  padding: 8px 16px;
+  border-radius: 8px;
+  align-self: end;
 }
