--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -7,7 +7,14 @@
   display: flex;
 }
 
-#root > div {
-  flex: 1;
-  border: 3px solid black;
+#root > div:first-child {
+  flex: 2;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 1rem;
+}
+
+#root > div:last-child {
+  flex: 3;
 }
