--- a/src/styles/PreviewCV.css
+++ b/src/styles/PreviewCV.css
@@ -14,6 +14,11 @@
   align-items: center;
 }
 
+.contact-container > div {
+  display: flex;
+  gap: 0.5rem;
+}
+
 .school {
   display: flex;
   gap: 2rem;
